<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/accountTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/account"
            android:textAlignment="center"
            android:textColor="#ff4343"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_firstNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_firstNameInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_lastNameTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_lastNameInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_birthMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthmonth"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_birthYearInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/year"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editAccount_birthMonthInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/month"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_addressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_homePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homephone"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_homePhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_cellPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cellphone"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_cellPhoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_gradeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teacher"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_teacherInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/editAccount_emergencyContactInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergencyinfo"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/editAccount_emergencyContactInfoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_updateAccountInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/update"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>